# codelens-mcp-plugin

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_ANALYSIS_KO.md  ARCHITECTURE_REVIEW_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT_NOTES.md  DEVELOPMENT_PIPELINE.md  Dockerfile.release  EVALUATION_REPORT.md  EVAL_CONTRACT.md  HARNESS_ARCHITECTURE.md  HARNESS_MODES.md  PROJECT_AGENT_POLICY.md  README.md  README_RUST.md  RESPONSE_CONTRACT.md  SKILL.md  VERIFIED_IMPROVEMENT_PLAN.md  build.gradle.kts  cliff.toml  gradle.properties  install.sh  jetbrains_sse_bridge.py  mcp.json  release-plz.toml  settings.gradle.kts  test-all-tools.py  test-mcp-live.py  test-mcp-tools.py  workspace_mcp_server.py
crates/codelens-core/: Cargo.toml  models
crates/codelens-core/benches/: indexing.rs
crates/codelens-core/models/codesearch-v6-backup/: config.json
crates/codelens-core/src/: auto_import.rs  call_graph.rs  change_signature.rs  circular.rs  community.rs  coupling.rs  db.rs  embedding.rs  embedding_store.rs  file_ops.rs  git.rs  import_graph.rs  inline.rs  lang_config.rs  lang_registry.rs  lib.rs  lsp.rs  memory.rs  move_symbol.rs  project.rs  rename.rs  scope_analysis.rs  search.rs  symbols.rs  type_hierarchy.rs  watcher.rs
crates/codelens-core/src/db/: mod.rs  ops.rs  tests.rs
crates/codelens-core/src/file_ops/: mod.rs  reader.rs  writer.rs
crates/codelens-core/src/import_graph/: dead_code.rs  mod.rs  parsers.rs  resolvers.rs
crates/codelens-core/src/lsp/: mod.rs  parsers.rs  registry.rs  session.rs  tests.rs  types.rs
crates/codelens-core/src/symbols/: mod.rs  parser.rs  ranking.rs  reader.rs  scoring.rs  tests.rs  types.rs  writer.rs
crates/codelens-core/tests/: rename_real.rs  rename_vs_grep.rs  snapshot_golden.rs
crates/codelens-core/tests/snapshots/: snapshot_golden__find_symbol_exact.snap  snapshot_golden__find_symbol_fuzzy.snap  snapshot_golden__ranked_context_user_service.snap
crates/codelens-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/codelens-engine/benches/: indexing.rs  search_paths.rs
crates/codelens-engine/models/codesearch/: arm64
crates/codelens-engine/src/: auto_import.rs  call_graph.rs  change_signature.rs  circular.rs  community.rs  dead_code.rs  edit_transaction.rs  embedding.rs  embedding_store.rs  embedding_types.rs  git.rs  inline.rs  ir.rs  lang_config.rs  lang_registry.rs  lib.rs  memory.rs  move_symbol.rs  oxc_analysis.rs  phantom_modules.rs  project.rs  redundant_definitions.rs  rename.rs  scip_backend.rs  scope_analysis.rs  search.rs  test_helpers.rs  type_hierarchy.rs  unicode.rs  vfs.rs  watcher.rs
crates/codelens-engine/src/call_graph/: api.rs  extract.rs  js_imports.rs  language.rs  mod.rs  noise.rs  queries.rs  resolve.rs  tests.rs  types.rs
crates/codelens-engine/src/db/: mod.rs  ops.rs  tests.rs
crates/codelens-engine/src/embedding/: cache.rs  chunk_ops.rs  duplicates.rs  engine_impl.rs  ffi.rs  mod.rs  model_assets.rs  model_bakeoff.rs  prompt.rs  ranker_settings.rs  runtime.rs  runtime_info.rs  runtime_settings.rs  tests.rs  vec_store.rs
crates/codelens-engine/src/file_ops/: mod.rs  reader.rs  support.rs  tests.rs  text_refs.rs  types.rs  writer.rs
crates/codelens-engine/src/import_graph/: cache.rs  cfg_test.rs  dead_code.rs  graph.rs  mod.rs  parsers.rs  queries.rs  resolvers.rs  tests.rs  types.rs
crates/codelens-engine/src/lsp/: code_actions.rs  command_security_tests.rs  commands.rs  mod.rs  parser_tests.rs  parsers.rs  paths.rs  position.rs  protocol.rs  readiness.rs  registry.rs  session.rs  session_requests.rs  tests.rs  type_hierarchy.rs  types.rs  workspace_edit.rs
crates/codelens-engine/src/memory/: archive.rs  audit.rs  frontmatter.rs  mod.rs  paths.rs  policy.rs  store.rs  tests.rs
crates/codelens-engine/src/project/: discovery.rs  exclusions.rs  frameworks.rs  language.rs  paths.rs  remote_root.rs  root.rs  root_detect.rs  tests.rs  workspace.rs
crates/codelens-engine/src/scip_backend/: call_graph.rs  mod.rs  navigation.rs  parse.rs  tests.rs
crates/codelens-engine/src/symbols/: api.rs  index.rs  mod.rs  parser.rs  ranking.rs  reader.rs  scoring.rs  support.rs  tests.rs  types.rs  writer.rs
crates/codelens-engine/tests/: call_graph_accuracy.rs  ranking_pagerank_effect.rs  rename_real.rs  rename_vs_grep.rs  snapshot_golden.rs
crates/codelens-engine/tests/snapshots/: snapshot_golden__find_symbol_exact.snap  snapshot_golden__find_symbol_fuzzy.snap  snapshot_golden__python_overview_names.snap  snapshot_golden__ranked_context_user_service.snap  snapshot_golden__ranked_context_user_service.snap.new  snapshot_golden__typescript_overview_names.snap
crates/codelens-mcp/: Cargo.toml  LICENSE  README.md  build.rs  codelens-mcp_bin_x86_64-unknown-linux-gnu.cdx.json  tools.toml
crates/codelens-mcp/src/: agent_coordination.rs  analysis_handles.rs  analysis_queue.rs  artifact_store.rs  audit_sink.rs  authority.rs  backend.rs  backend_operation_matrix.rs  build_info.rs  cli.rs  client_profile.rs  dispatch.rs  dispatch_access.rs  dispatch_response.rs  dispatch_response_support.rs  env_compat.rs  error.rs  harness_host.rs  host_capabilities.rs  instruction_audit.rs  integration_tests.rs  job_store.rs  lifecycle.rs  limits.rs  main.rs  memory_pressure.rs  mutation_audit.rs  mutation_gate.rs  operation.rs  operator.rs  orchestration_store.rs  orphan_handlers.rs  over_visible.rs  preflight_store.rs  principals.rs  prompts.rs  protocol.rs  registry.rs  resource_analysis.rs  resource_catalog.rs  (+22 more)
crates/codelens-mcp/src/agent_coordination/: db.rs  memory.rs
crates/codelens-mcp/src/cli/: host.rs  host_adapter.rs  mod.rs  startup_tests.rs
crates/codelens-mcp/src/dispatch/: access.rs  embedding_coverage.rs  envelope.rs  mod.rs  query_engine.rs  rate_limit.rs  response.rs  (+6 more)
crates/codelens-tui/: Cargo.toml  README.md  codelens-tui_bin_x86_64-unknown-linux-gnu.cdx.json
crates/codelens-tui/src/: app.rs  main.rs  ui.rs  watch.rs
rust/: Cargo.toml
rust/crates/codelens-core/: Cargo.toml
rust/crates/codelens-mcp/: Cargo.toml
(+1568 files in other folders)
