[workspace]
members = [
    "crates/codelens-core",
    "crates/codelens-mcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "1.0.0"
description = "Pure Rust MCP server for code intelligence — 56 tools, 15 languages, semantic search"
repository = "https://github.com/mupozg823/codelens-mcp-plugin"
homepage = "https://github.com/mupozg823/codelens-mcp-plugin"
readme = "README.md"
keywords = ["mcp", "code-intelligence", "tree-sitter", "lsp", "ai"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
globset = "0.4"
petgraph = "0.7"
rayon = "1.10"
regex = "1.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11"
thiserror = "2"
serde_json = "1.0"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin = { package = "tree-sitter-kotlin-ng", version = "1.1" }
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-dart = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-erlang = "0.15"
tree-sitter-r = "1.2"
tree-sitter-bash = "0.25"
tree-sitter-julia = "0.23"
# tree-sitter-perl requires tree-sitter 0.26 — deferred until tree-sitter upgrade
fastembed = "5"
sqlite-vec = "0.1.8-alpha.1"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["json", "redactions"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
url = "2.5"
walkdir = "2.5"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
