[workspace]
members = [
    "crates/codelens-engine",
    "crates/codelens-mcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "1.6.3"
description = "Pure Rust MCP server for code intelligence — 89 tools (+6 semantic), 25 languages, tree-sitter-first, 50-87% fewer tokens"
repository = "https://github.com/mupozg823/codelens-mcp-plugin"
homepage = "https://github.com/mupozg823/codelens-mcp-plugin"
readme = "README.md"
keywords = ["mcp", "code-intelligence", "tree-sitter", "lsp", "ai"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
globset = "0.4"
petgraph = "0.7"
rayon = "1.10"
regex = "1.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11"
thiserror = "2"
serde_json = { version = "1.0", features = ["preserve_order"] }
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin = { package = "tree-sitter-kotlin-ng", version = "1.1" }
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-dart = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-erlang = "0.15"
tree-sitter-r = "1.2"
tree-sitter-bash = "0.25"
tree-sitter-julia = "0.23"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-toml-updated = "0.20"
tree-sitter-yaml = "0.7"
tree-sitter-clojure = "0.1"
# make/dockerfile/vim/fsharp/perl — all need tree-sitter 0.26 (LanguageFn conflict with 0.25)
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls"] }
sqlite-vec = "0.1.8-alpha.1"
criterion = { version = "0.5", features = ["html_reports"] }
oxc_allocator = "0.123"
oxc_parser = "0.123"
oxc_semantic = "0.123"
oxc_span = "0.123"
insta = { version = "1", features = ["json", "redactions"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
url = "2.5"
walkdir = "2.5"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
