[workspace]
members = [
    "crates/codelens-core",
    "crates/codelens-mcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
globset = "0.4"
petgraph = "0.7"
regex = "1.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin = { package = "tree-sitter-kotlin-ng", version = "1.1" }
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-ruby = "0.23"
url = "2.5"
walkdir = "2.5"
