[package]
name = "codelens-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
# Runtime artifacts (downloaded model weights, fastembed cache, per-project index)
# are excluded so `cargo publish` does not try to package symlinks pointing
# outside the crate root or oversize ONNX blobs above the crates.io 10MB cap.
exclude = [
    "models/**",
    ".fastembed_cache/**",
    ".codelens/**",
]

[dependencies]
anyhow.workspace = true
globset.workspace = true
petgraph.workspace = true
rayon.workspace = true
strsim.workspace = true
regex.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-ocaml.workspace = true
tree-sitter-erlang.workspace = true
tree-sitter-r.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-css.workspace = true
tree-sitter-html.workspace = true
tree-sitter-toml-updated.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-clojure.workspace = true
# make/dockerfile/vim/fsharp/perl need tree-sitter 0.26
notify.workspace = true
notify-debouncer-mini.workspace = true
url.workspace = true
walkdir.workspace = true
libc.workspace = true
tracing.workspace = true
fastembed = { workspace = true, optional = true }
ort = { version = "2.0.0-rc.11", default-features = false, optional = true }
sqlite-vec = { workspace = true, optional = true }
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
scip = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }

[features]
default = ["semantic"]
semantic = ["dep:fastembed", "dep:ort", "dep:sqlite-vec"]
coreml = ["semantic", "ort/coreml"]
scip-backend = ["dep:scip", "dep:protobuf"]
## Enable fastembed built-in model loading (auto-download from HuggingFace).
## Used for A/B model comparison via CODELENS_EMBED_MODEL env var.
model-bakeoff = ["semantic", "fastembed/hf-hub"]

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
tempfile = "3.15"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search_paths"
harness = false
