[package]
name = "codelens-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
# Runtime artifacts (downloaded model weights, fastembed cache, per-project index)
# are excluded so `cargo publish` does not try to package symlinks pointing
# outside the crate root or oversize ONNX blobs above the crates.io 10MB cap.
exclude = [
    "models/**",
    ".fastembed_cache/**",
    ".codelens/**",
]

# REQUIRED for Benchmark CI. `cargo bench --benches` (used by
# benchmark.yml) does NOT skip the library target: per `cargo bench
# --help`, `--benches` "Benchmark all targets in bench mode that have
# `bench = true`" — that includes the lib by default. Without this
# opt-out, criterion's `--save-baseline <name>` arg leaks into the std
# test runner invoked on `unittests src/lib.rs` and crashes the
# workflow with `error: Unrecognized option: 'save-baseline'`. Revert
# a9c9ae96 proved this: dropping the section put Benchmark CI back
# into failure on the next push.
[lib]
bench = false

[dependencies]
anyhow.workspace = true
globset.workspace = true
petgraph.workspace = true
rayon.workspace = true
strsim.workspace = true
regex.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-kotlin = { workspace = true, optional = true }
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-dart = { workspace = true, optional = true }
tree-sitter-lua.workspace = true
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-haskell = { workspace = true, optional = true }
tree-sitter-ocaml = { workspace = true, optional = true }
tree-sitter-erlang = { workspace = true, optional = true }
tree-sitter-r = { workspace = true, optional = true }
tree-sitter-bash.workspace = true
tree-sitter-julia = { workspace = true, optional = true }
tree-sitter-css.workspace = true
tree-sitter-html.workspace = true
tree-sitter-toml-updated.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-clojure = { workspace = true, optional = true }
# make/dockerfile/vim/fsharp/perl need tree-sitter 0.26
notify.workspace = true
notify-debouncer-mini.workspace = true
url.workspace = true
walkdir.workspace = true
libc.workspace = true
tracing.workspace = true
fastembed = { workspace = true, optional = true }
ort = { version = "2.0.0-rc.11", default-features = false, optional = true }
sqlite-vec = { workspace = true, optional = true }
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
scip = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }

[features]
default = ["semantic", "lang-extra"]
semantic = ["dep:fastembed", "dep:ort", "dep:sqlite-vec"]
coreml = ["semantic", "ort/coreml"]
scip-backend = ["dep:scip", "dep:protobuf"]
# Niche tree-sitter languages — on by default so `cargo install codelens-mcp`
# is unchanged; opt out with `--no-default-features` to drop ~40 MB of `_ts_lex`
# binary when this host doesn't analyse them. Canonical list below (alphabetical).
lang-extra = [
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-clojure",
    "dep:tree-sitter-dart",
    "dep:tree-sitter-elixir",
    "dep:tree-sitter-erlang",
    "dep:tree-sitter-go",
    "dep:tree-sitter-haskell",
    "dep:tree-sitter-java",
    "dep:tree-sitter-julia",
    "dep:tree-sitter-kotlin",
    "dep:tree-sitter-ocaml",
    "dep:tree-sitter-php",
    "dep:tree-sitter-r",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-scala",
    "dep:tree-sitter-swift",
    "dep:tree-sitter-zig",
]
## Enable fastembed built-in model loading (auto-download from HuggingFace).
## Used for A/B model comparison via CODELENS_EMBED_MODEL env var.
model-bakeoff = ["semantic", "fastembed/hf-hub"]

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
tempfile = "3.15"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search_paths"
harness = false
