[package]
name = "codelens-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
# Test-only sources live under src/ for `cfg(test)` access to private
# modules, but they should not bloat the published crates.io tarball.
exclude = [
    "src/integration_tests/**",
    "src/server/http_tests/**",
    "src/server/http_tests.rs",
    "src/cli/startup_tests.rs",
]

[[bin]]
name = "codelens-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
regex.workspace = true
rusqlite.workspace = true
toml.workspace = true
rustls = { workspace = true, optional = true }
codelens-engine = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
rayon.workspace = true
# mimalloc as the global allocator (declared in main.rs). Faster small-object
# allocation than macOS libsystem_malloc for tokio task spawn / serde_json /
# regex matchers — measured ~5-15% on alloc-heavy hot paths.
mimalloc = { version = "0.1.50", default-features = false }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true }
http-body-util = { workspace = true }
base64 = { workspace = true }
native-tls = { workspace = true }
rcgen = { workspace = true }
tempfile = "3"
filetime = "0.2"

[features]
# `cargo install codelens-mcp` ships a BM25 + AST + call-graph build
# with the SCIP precise backend compiled in. SCIP itself activates only
# when the project has an `index.scip` / `.scip/index.scip` /
# `.codelens/index.scip` file — without one, runtime falls back to
# tree-sitter. Cost of compiling SCIP into every default install:
# ~99 KB binary, ~5 s build time (measured 2026-05-03 on M4 Pro).
#
# Hybrid retrieval (semantic embeddings) still requires `--features
# semantic` plus a model directory via `CODELENS_MODEL_DIR`, or the
# GitHub Release tarball that bundles the model. See ADR-0012.
default = ["scip-backend", "lang-extra"]
semantic = ["codelens-engine/semantic"]
coreml = ["semantic", "codelens-engine/coreml"]
model-bakeoff = ["semantic", "codelens-engine/model-bakeoff"]
http = ["dep:axum", "dep:axum-server", "dep:tokio", "dep:uuid", "dep:tokio-stream", "dep:jsonwebtoken", "dep:ureq", "dep:rustls"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tokio"]
scip-backend = ["codelens-engine/scip-backend"]
# Niche / less-common tree-sitter languages — on by default for crates.io
# users (backward-compat). Drop with `--no-default-features` for minimal
# builds; see codelens-engine's `lang-extra` for the full list of langs
# this gates.
lang-extra = ["codelens-engine/lang-extra"]
