[package]
name = "codelens-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal dashboard for CodeLens indexes, symbol search, and operator health"
repository.workspace = true
keywords = ["tui", "dashboard", "terminal", "observability", "code-intelligence"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "codelens-tui"
path = "src/main.rs"

[dependencies]
codelens-engine = { path = "../codelens-engine", version = "=1.9.56" }
ratatui = "0.29"
crossterm = "0.28"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
