[package]
name = "codelens-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal dashboard for CodeLens — project explorer, symbol search, diagnostics"
repository.workspace = true
keywords = ["tui", "code-intelligence", "dashboard", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "codelens-tui"
path = "src/main.rs"

[dependencies]
codelens-engine = { path = "../codelens-engine", version = "=1.13.11" }
ratatui = "0.30"
crossterm = "0.28"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
