[package]
name = "codelens-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
globset.workspace = true
petgraph.workspace = true
rayon.workspace = true
strsim.workspace = true
regex.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-ruby.workspace = true
url.workspace = true
walkdir.workspace = true
